--- a/package.yaml
+++ b/package.yaml
@@ -21,13 +21,21 @@ description: Please see the README on GitHub at <https://github.com/githubuser/d
 
 dependencies:
   - base >= 4.7 && < 5
+  - array
+  - bytestring
   - containers
+  - diagnose
   - hashable
   - monus-weighted-search
   - mtl
   - text
   - unordered-containers
+  - utf8-string
   - witherable
+
+build-tools:
+  - alex
+  - happy
 
 language: GHC2021
 
@@ -58,6 +66,7 @@ default-extensions:
   - PolyKinds
   - QualifiedDo
   - RankNTypes
+  - RecordWildCards
   - ScopedTypeVariables
   - StandaloneDeriving
   - StandaloneKindSignatures
