--- a/package.yaml
+++ b/package.yaml
@@ -46,6 +46,7 @@ default-extensions:
   - ConstraintKinds
   - DataKinds
   - DerivingVia
+  - DeriveAnyClass
   - DuplicateRecordFields
   - ExplicitNamespaces
   - FlexibleContexts
