Typed meta + pruning

--- a/dependent-type-search.cabal
+++ b/dependent-type-search.cabal
@@ -34,6 +34,8 @@ library
       TypeSearch.Raw
       TypeSearch.Term
       TypeSearch.Translate
+      TypeSearch.Unification
+      TypeSearch.UnificationModuloIso
   other-modules:
       Paths_dependent_type_search
   autogen-modules:
